fix: Set boder-bottom-width property for .ant-tabs-nav::before to 0 to prevent from double border of tab.

--- a/src/layouts/default/tabs/index.less
+++ b/src/layouts/default/tabs/index.less
@@ -36,6 +36,10 @@ html[data-theme='light'] {
       border: 0;
       box-shadow: none;
 
+      &::before {
+        border-bottom-width: 0;
+      }
+
       .ant-tabs-nav-container {
         height: @multiple-height;
         padding-top: 2px;
